--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-way-of-samurai",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://viktor-gif.github.io/MyReactApp/",
   "dependencies": {
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
